--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -15,8 +15,8 @@
 
       <li class="nav-item d-none d-sm-inline-block">
         <a class="nav-link" id="UserDropdown" href="#" data-toggle="dropdown" aria-expanded="false">
-          <span class="profile-text">Hello, Richard V.Welsh !</span>
-          <img class="img-xs rounded-circle" src="assets/images/faces/face1.jpg" alt="Profile image">
+          <span class="profile-text">Hello, Calvcom Tech</span>
+          <img class="img-xs rounded-circle" src="assets/images/faces/Biasse2.jpg" alt="Profile image">
         </a>
       </li>
     </ul>
